--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -18,5 +18,5 @@ const processedLocations = locations.map((location) => ({
   <nav class="fixed z-20 bg-white p-6">
     <p>The Pay Talk Project</p>
   </nav>
-  <MapViewer client:load locations={processedLocations} />
+  <MapViewer client:only="react" locations={processedLocations} />
 </Layout>
