--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,10 +15,22 @@ const processedLocations = locations.map((location) => ({
 ---
 
 <Layout title="Interactive Location Map with Audio Guides">
-  <nav
-    class="fixed z-20 bg-white text-p60-orange p-4 m-4 rounded-3xl shadow-md"
-  >
-    <p>📍 The Pay Talk Project</p>
+  <nav class="fixed z-20 w-full p-2 flex justify-between">
+    <div class="p-3">
+      <p class="font-serif text-5xl text-p60-blue inline-block tracking-tight">
+        <span class="italic stroke">Pay</span><span
+          class="ml-0.5 translate-y-0.5 inline-block font-sans tracking-[-0.3rem]"
+          >talk</span
+        >
+      </p>
+    </div>
+    <div
+      class="p-3 m-3 bg-p60-orange hover:bg-p60-blue transform cursor-pointer text-p60-paper rounded-full w-12 h-12 flex justify-center items-center"
+    >
+      <p class="text-4xl font-serif italic translate-y-0.5 -translate-x-0.25">
+        i
+      </p>
+    </div>
   </nav>
   <MapViewer client:only="react" locations={processedLocations} />
 </Layout>
