--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -20,6 +20,6 @@ const processedLocations = await Promise.all(
 );
 ---
 
-<Layout title="The Pay Talk Project">
+<Layout title="The Yellow Page">
   <MapViewer client:only="react" locations={processedLocations} />
 </Layout>
