--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -15,7 +15,7 @@ const { title = "Location Viewer" } = Astro.props;
     <meta name="generator" content={Astro.generator} />
     <title>{title}</title>
   </head>
-  <body class="bg-p60-paper">
+  <body class="bg-yp-yellow">
     <slot />
   </body>
 </html>
