--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,18 +1,12 @@
-@import url('https://fonts.googleapis.com/css2?family=Old+Standard+TT:ital@0;1&display=swap');
+
+  @import url("https://use.typekit.net/mva0fcf.css");
+
 @import "tailwindcss";
 
-@font-face {
-  font-family: 'technomat';
-  src: url("/fonts/technomat.woff");
-}
-
 @theme {
-  --font-sans: "technomat", sans-serif; 
-  --font-serif: "Old Standard TT", serif;
-  --color-p60-blue: #021B4C;
-  --color-p60-orange: #F67925;
-  --color-p60-paper: #F9E6D6;
-  --color-p60-black: #191919;
+  --font-sans: "griffith-gothic", sans-serif; 
+  --font-serif: "griffith-gothic", serif;
+  --color-yp-yellow: #fff100;
 }
 
 html,
@@ -67,16 +61,16 @@ input[type="range"] {
   -webkit-appearance: none;
 }
 input[type="range"]::-webkit-slider-thumb {
-  @apply h-3 w-3 cursor-pointer rounded-[50%] bg-p60-orange;
+  @apply h-3 w-3 cursor-pointer rounded-[50%] bg-yp-yellow;
   -webkit-appearance: none;
 }
 input[type="range"]::-moz-range-thumb {
-  @apply h-3 w-3 cursor-pointer rounded-[50%] border-[none] bg-p60-orange;
+  @apply h-3 w-3 cursor-pointer rounded-[50%] border-[none] bg-yp-yellow;
 }
 
 /* Filter styles */
 .filter-badge {
-  @apply inline-block px-2 py-1 rounded-full text-xs bg-p60-orange text-white;
+  @apply inline-block px-2 py-1 rounded-full text-xs bg-yp-yellow text-white;
 }
 
 .filter-active .mapboxgl-marker {
@@ -89,12 +83,12 @@ input[type="range"]::-moz-range-thumb {
 }
 
 .filter-dropdown button:hover {
-  @apply bg-p60-paper;
+  @apply bg-yp-yellow;
 }
 
 /* Animated filter button */
 .filter-button-active {
-  @apply bg-p60-orange border-p60-blue;
+  @apply bg-yp-yellow border-yp-yellow;
   animation: pulse 2s infinite;
 }
 
